added authorization to swagger file and added test files to class and degree routes
